tests/paczka1/small_fuzzy/75827567.err
Error in line 10: S362 A494 87,2
Error in line 12: S362 S362 65,0
